fdo#50269: bitmap area fill pattern reversed in LO3.5.x

this partially reverted 619ea0c6d3b8fb4390bf5e82f1b44608c3cd878d
in order to retain a hack for non-black background color

Change-Id: I89d89cedb5e27e2a05b1ecc13569e4899d1743d2